07.18 commit feat: postDetail, postEdit docs: Readme.md update